# hubris

./: Cargo.toml
drv/sidecar-mainboard-controller/: sidecar_mainboard_controller.adoc  sidecar_mainboard_controller.html  sidecar_mainboard_controller.json
drv/sidecar-mainboard-controller/src/: fan_modules.rs  ignition.rs
drv/sidecar-seq-server/src/: main.rs
image/: Cargo.toml
image/src/: bin.rs  lib.rs
