[package]
name = "image"
version = "0.1.0"
edition = "2021"

[lib]
name = "image"
path = "src/lib.rs"

[[bin]]
name = "hheader"
test = false
bench = false
path = "src/bin.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
zerocopy.workspace = true
hubpack.workspace = true
serde.workspace = true
